2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (struct elf_build_id): New.
	(dwfl_segment_report_module): Pass build_id as struct.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Remove
	release_buffer, call memory_callback directly.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Remove
	segment_read, call memory_callback directly.

2020-11-19  Andreas Krebbel  <krebbel@linux.ibm.com>

	* linux-pid-attach.c (pid_memory_read): Shift the upper 4 bytes
	down on big endian 64 bit targets.

2020-11-12  Timm Bäder <tbaeder@redhat.com>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Remove
	finish function, replace with goto out.

2020-11-12  Timm Bäder <tbaeder@redhat.com>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Declare
	p32 and p64 as pointers instead of arrays.

2020-09-18  Mark Wielaard  <mark@klomp.org>

	* zstd.c: New file.
	* libdwflP.h: Add DWFL_E_ZSTD and __libdw_unzstd.
	* Makefile.am (libdwfl_a_SOURCES): add zstd.c if ZSTD.
	* gzip.c: Add defines and includes for ZSTD.
	(zlib_fail): Don't define for ZSTD.
	(unzip): Change pread_retry failure from zlib_fail to fail.
	Add ZSTD support.
	* open.c (decompress): Also try __libdw_unzstd.
	* linux-kernel-modules.c (check_suffix): Also TRY ".ko.zst".

2020-08-20  Dmitry V. Levin  <ldv@altlinux.org>

	* Makefile.am (libdwfl_a_SOURCES): Conditionalize
	debuginfod-client.c on LIBDEBUGINFOD.
	* dwfl_build_id_find_elf.c (dwfl_build_id_find_elf): Conditionalize
	__libdwfl_debuginfod_find_executable invocation on
	ENABLE_LIBDEBUGINFOD.
	* dwfl_end.c (dwfl_end): Conditionalize __libdwfl_debuginfod_end
	invocation on ENABLE_LIBDEBUGINFOD.
	* find-debuginfo.c (dwfl_standard_find_debuginfo): Conditionalize
	__libdwfl_debuginfod_find_debuginfo invocation on
	ENABLE_LIBDEBUGINFOD.
	* libdwflP.h: Guard debuginfod.h include with ENABLE_LIBDEBUGINFOD.